--- a/index.html
+++ b/index.html
@@ -50,20 +50,20 @@
       </div>
     </div>
     <div class="grid-x grid-padding-x">
-      <div class="large-7 medium-4 small-4 cell">
+      <div class="large-6 medium-4 small-4 cell">
         <div class="primary callout">
           <p class="mv_subtitle">今話題の浄水型だから無料設置後すぐに使える</p>
-          <p class="mv_title">Y・S Advance</p>
-          <p class="mv_title">WATAR SERVER</p>
+          <h1 class="mv_title">Y・S Advance</h1>
+          <h1 class="mv_title">WATAR SERVER</h1>
         </div>
       </div>
       <div class="large-3 medium-4 small-4 cell">
-        <div class="primary callout">
+        <div class="primary callout server_img">
           <img src="img/server.png" alt="">
         </div>
       </div>
       <div class="large-2 medium-4 small-4 cell">
-        <div class="primary callout">
+        <div class="primary callout top_btn">
           <img src="img/mv_cta.png" alt="">
         </div>
       </div>
@@ -136,7 +136,7 @@
       <div class="grid-x grid-padding-x">
         <div class="large-6 medium-6 cell">
           <div class="primary callout">
-            <img src="img/weter.png" alt="">
+            <img class="chigai_img" src="img/weter.png" alt="">
           </div>
         </div>
         <div class="large-6 medium-6 cell">
@@ -163,16 +163,15 @@
         
     </section>
 
-
-    <section class="merit">
+    <section class="merit grid-container">
       <h2 class="sec_ttl">お客さまに選ばれる3つのメリット</h2>
       <div class="merit1">
         <div class="grid-x grid-padding-x">
           <div class="large-6 medium-6 cell">
             <div class="primary callout">
               <h3 class="merit1__title">01</h3>
-              <p class="merit1__txt">浄水型でいつでも<br>
-                おいしい水が飲める。</p>
+              <h2 class="merit1__txt">浄水型でいつでも<br>
+                おいしい水が飲める。</h2>
             </div>
           </div>
           <div class="large-6 medium-6 cell">
@@ -183,40 +182,40 @@
         </div>
         <div class="grid-x grid-padding-x">
           <div class="large-6 medium-6 cell">
-            <div class="primary callout">
+            <div class="primary callout merit1__img__2">
               <img src="img/merit02.png" alt="">
             </div>
           </div>
-          <div class="large-6 medium-6 cell">
+          <div class="large-6 medium-6 cell txt_center">
             <div class="primary callout merit1__img">
-              <p class="merit1__txt">ボトル交換の手間なしで<br>
-                いつでも使用可能。</p>
+              <h2 class="merit1__txt">ボトル交換の手間なしで<br>
+                いつでも使用可能。</h2>
             </div>
           </div>
         </div>
         <div class="grid-x grid-padding-x">
-          <div class="large-6 medium-6 cell">
+          <div class="large-6 medium-6 cell txt_center">
             <div class="primary callout">
-              <p class="merit1__txt">水道水を濾過する<br>
-                抽出仕様。</p>
+              <h2 class="merit1__txt">水道水を濾過する<br>
+                抽出仕様。</h2>
             </div>
           </div>
-          <div class="large-6 medium-6 cell">
-            <div class="primary callout merit1__img">
+          <div class="large-6 medium-6 cell txt_center">
+            <div class="primary callout merit1__img__3">
               <img src="img/merit03.png" alt="">
             </div>
           </div>
         </div>
         <div class="grid-x grid-padding-x">
-          <div class="large-6 medium-6 cell">
-            <div class="primary callout">
+          <div class="large-6 medium-6 cell txt_center">
+            <div class="primary callout merit1__img__4">
               <img src="img/merit04.png" alt="">
             </div>
           </div>
-          <div class="large-6 medium-6 cell">
+          <div class="large-6 medium-6 cell txt_center">
             <div class="primary callout merit1__img">
-              <p class="merit1__txt">圧倒的なコスパで<br>
-                暮らしをもっと快適に。</p>
+              <h2 class="merit1__txt">圧倒的なコスパで<br>
+                暮らしをもっと快適に。</h2>
             </div>
           </div>
         </div>
@@ -230,20 +229,24 @@
       </div>
 
       <div class="merit2">
-        <div class="grid-x grid-padding-x">
+
+        <h3 class="merit2__title">02</h3>
+
+        <div class="grid-x grid-padding-x merit_af">
           <div class="large-6 medium-6 cell">
             <div class="primary callout merit2__img">
               <img src="img/merit02.child.png" alt="">
             </div>
           </div>
+
           <div class="large-6 medium-6 cell">
             <div class="primary callout">
-              <h3 class="merit2__title">02</h3>
               <p class="merit2__txt">高度な衛生管理で、<br>
                 安心してお飲みいただけます。</p>
             </div>
           </div>
         </div>
+
 
         <div class="swiper">
           <div class="swiper-wrapper">
@@ -270,7 +273,7 @@
       </div>
 
       <div class="merit3">
-        <div class="grid-x grid-padding-x">
+        <div class="grid-x grid-padding-x merit_kitchen">
           <div class="large-6 medium-6 cell">
             <div class="primary callout">
               <h3 class="merit3__title">03</h3>
@@ -285,6 +288,7 @@
           </div>
         </div>
       </div>
+    
     </section>
 
     <section class="life">
@@ -339,68 +343,71 @@
     </section>
 
     <section class="customer">
-      <h2 class="sec_ttl">Voice of customer</h2>
-      <p>お客さまの声</p>
-      <div class="grid-x grid-padding-x">
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout customer__img">
-            <img src="img/customer01.png" alt="">
+      <div class="grid-container">
+        <h2 class="sec_ttl">Voice of customer</h2>
+        <p>お客さまの声</p>
+        <div class="grid-x grid-padding-x customer_ttl">
+          <div class="large-6 medium-6 cell">
+            <div class="primary callout customer__img">
+              <img src="img/customer01.png" alt="">
+            </div>
+          </div>
+          <div class="large-6 medium-6 cell">
+            <div class="primary callout">
+              <p class="customer__txt">Aさま（岡山県）</p>
+              <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
+                立つ。情に棹させば流される。意地を通せば窮屈<br>
+                だ。山路を登りながら、こう考えた。智に働けば<br>
+                角が立つ。情に棹させば流される。意地を通せば<br>
+                窮屈だ。山路を登りながら、こう考えた。智に働<br>
+                けば角が立つ。情に棹させば流される。意地を通<br>
+                せば窮屈だ。山路を登りながら、こう考えた。</p>
+            </div>
           </div>
         </div>
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout">
-            <p class="customer__txt">Aさま（岡山県）</p>
-            <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
-              立つ。情に棹させば流される。意地を通せば窮屈<br>
-              だ。山路を登りながら、こう考えた。智に働けば<br>
-              角が立つ。情に棹させば流される。意地を通せば<br>
-              窮屈だ。山路を登りながら、こう考えた。智に働<br>
-              けば角が立つ。情に棹させば流される。意地を通<br>
-              せば窮屈だ。山路を登りながら、こう考えた。</p>
+  
+        <hr class="border-line">
+  
+        <div class="grid-x grid-padding-x">
+          <div class="large-6 medium-6 cell">
+            <div class="primary callout customer__img">
+              <img src="img/customer02.png" alt="">
+            </div>
+          </div>
+          <div class="large-6 medium-6 cell">
+            <div class="primary callout">
+              <p class="customer__txt">Bさま（岡山県）</p>
+              <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
+                立つ。情に棹させば流される。意地を通せば窮屈<br>
+                だ。山路を登りながら、こう考えた。智に働けば<br>
+                角が立つ。情に棹させば流される。意地を通せば<br>
+                窮屈だ。山路を登りながら、こう考えた。智に働<br>
+                けば角が立つ。情に棹させば流される。意地を通<br>
+                せば窮屈だ。山路を登りながら、こう考えた。</p>
+            </div>
           </div>
         </div>
+  
+        <hr class="border-line">
+  
+        <div class="grid-x grid-padding-x">
+          <div class="large-6 medium-6 cell">
+            <div class="primary callout life__img">
+              <img src="img/customer03.png" alt="">
+            </div>
+          </div>
+          <div class="large-6 medium-6 cell">
+            <div class="primary callout">
+              <p class="customer__txt">Cさま（岡山県）</p>
+              <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
+                立つ。情に棹させば流される。意地を通せば窮屈<br>
+                だ。山路を登りながら、こう考えた。智に働けば<br>
+                角が立つ。情に棹させば流される。意地を通せば<br>
+                窮屈だ。山路を登りながら、こう考えた。智に働<br>
+                けば角が立つ。情に棹させば流される。意地を通<br>
+                せば窮屈だ。山路を登りながら、こう考えた。</p>
+  
       </div>
-
-      <hr class="border-line">
-
-      <div class="grid-x grid-padding-x">
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout customer__img">
-            <img src="img/customer02.png" alt="">
-          </div>
-        </div>
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout">
-            <p class="customer__txt">Bさま（岡山県）</p>
-            <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
-              立つ。情に棹させば流される。意地を通せば窮屈<br>
-              だ。山路を登りながら、こう考えた。智に働けば<br>
-              角が立つ。情に棹させば流される。意地を通せば<br>
-              窮屈だ。山路を登りながら、こう考えた。智に働<br>
-              けば角が立つ。情に棹させば流される。意地を通<br>
-              せば窮屈だ。山路を登りながら、こう考えた。</p>
-          </div>
-        </div>
-      </div>
-
-      <hr class="border-line">
-
-      <div class="grid-x grid-padding-x">
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout life__img">
-            <img src="img/customer03.png" alt="">
-          </div>
-        </div>
-        <div class="large-6 medium-6 cell">
-          <div class="primary callout">
-            <p class="customer__txt">Cさま（岡山県）</p>
-            <p class="customer__voice">山路を登りながら、こう考えた。智に働けば角が<br>
-              立つ。情に棹させば流される。意地を通せば窮屈<br>
-              だ。山路を登りながら、こう考えた。智に働けば<br>
-              角が立つ。情に棹させば流される。意地を通せば<br>
-              窮屈だ。山路を登りながら、こう考えた。智に働<br>
-              けば角が立つ。情に棹させば流される。意地を通<br>
-              せば窮屈だ。山路を登りながら、こう考えた。</p>
           </div>
         </div>
       </div>
@@ -436,7 +443,14 @@
           </li>
           <li class="accordion-item is-active" data-accordion-item>
             <!-- Accordion tab title -->
-            <a href="#" class="accordion-title">レンタル料金の支払い方法は？</a>
+            <a href="#" class="accordion-title">
+              <div class="grid-x">
+                <div class="qa-title">
+                  <p class="ao">Q</p>
+                </div>
+              <p>レンタル料金の支払い方法は？</p>
+              </div>
+            </a>
   
             <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
             <div class="accordion-content" data-tab-content>
@@ -446,7 +460,14 @@
           </li>
           <li class="accordion-item is-active" data-accordion-item>
             <!-- Accordion tab title -->
-            <a href="#" class="accordion-title">電気代はいくらですか？</a>
+            <a href="#" class="accordion-title">
+              <div class="grid-x">
+                <div class="qa-title">
+                  <p class="ao">Q</p>
+                </div>
+                <p>電気代はいくらですか？</p>
+                </div>
+              </a>
   
             <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
             <div class="accordion-content" data-tab-content>
@@ -456,7 +477,14 @@
           <ul class="accordion" data-accordion data-allow-all-closed="true">
             <li class="accordion-item is-active" data-accordion-item>
               <!-- Accordion tab title -->
-              <a href="#" class="accordion-title">赤ちゃんのミルクに使えますか？</a>
+              <a href="#" class="accordion-title">
+                <div class="grid-x">
+                  <div class="qa-title">
+                    <p class="ao">Q</p>
+                  </div>
+                  <p>赤ちゃんのミルクに使えますか？</p>
+                </div>
+                </a>
   
               <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
               <div class="accordion-content" data-tab-content>
@@ -466,7 +494,14 @@
             <ul class="accordion" data-accordion data-allow-all-closed="true">
               <li class="accordion-item is-active" data-accordion-item>
                 <!-- Accordion tab title -->
-                <a href="#" class="accordion-title">水素水は使用できますか？</a>
+                <a href="#" class="accordion-title">
+                  <div class="grid-x">
+                    <div class="qa-title">
+                      <p class="ao">Q</p>
+                    </div>
+                    <p>水素水は使用できますか？</p>
+                  </div>
+                  </a>
   
                 <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
                 <div class="accordion-content" data-tab-content>
@@ -477,7 +512,14 @@
               <ul class="accordion" data-accordion data-allow-all-closed="true">
                 <li class="accordion-item is-active" data-accordion-item>
                   <!-- Accordion tab title -->
-                  <a href="#" class="accordion-title">売買も出来ますか？</a>
+                  <a href="#" class="accordion-title">
+                    <div class="grid-x">
+                      <div class="qa-title">
+                        <p class="ao">Q</p>
+                      </div>
+                      <p>売買も出来ますか？</p>
+                    </div>
+                    </a>
   
                   <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
                   <div class="accordion-content" data-tab-content>
@@ -492,7 +534,7 @@
     </section>
 
 
-    <section class="insta">
+    <section class="insta grid-container">
       <h2 class="sec_ttl">Instagram</h2>
       <p class="insta_sub">インスタグラム</p>
       <div class="grid-x grid-padding-x">
@@ -514,6 +556,8 @@
       </div>
     </section>
 
+
+    <section class="form grid-container">
     <div class="button-container">
       <a href="#" class="button" style="color: black;">Read more</a>
     </div>
@@ -531,6 +575,7 @@
         </div>
       </div>
     </div>
+  </section>
 
     <!-- <a href="#" class="button">Read more</a>
     <div class="grid-x grid-padding-x cta">
