--- a/index.html
+++ b/index.html
@@ -559,7 +559,7 @@
                 <div class="qa-title">
                   <p class="ao">Q</p>
                 </div>
-                <p>テキスト</p>
+                <p class="question">テキスト</p>
               </div>
             </a>
 
@@ -577,7 +577,7 @@
                 <div class="qa-title">
                   <p class="ao">Q</p>
                 </div>
-                <p>レンタル料金の支払い方法は？</p>
+                <p class="question">レンタル料金の支払い方法は？</p>
               </div>
             </a>
 
@@ -594,7 +594,7 @@
                 <div class="qa-title">
                   <p class="ao">Q</p>
                 </div>
-                <p>電気代はいくらですか？</p>
+                <p class="question">電気代はいくらですか？</p>
               </div>
             </a>
 
@@ -611,7 +611,7 @@
                 <div class="qa-title">
                   <p class="ao">Q</p>
                 </div>
-                <p>赤ちゃんのミルクに使えますか？</p>
+                <p class="question">赤ちゃんのミルクに使えますか？</p>
               </div>
             </a>
 
@@ -628,13 +628,13 @@
                 <div class="qa-title">
                   <p class="ao">Q</p>
                 </div>
-                <p>水素水は使用できますか？</p>
+                <p class="question">水素水は使用できますか？</p>
               </div>
             </a>
 
             <!-- Accordion tab content: it would start in the open state due to using the `is-active` state class. -->
             <div class="accordion-content" data-tab-content>
-              <p>水素水の場合は、別途カートリッジが必要なため、まずは<br>
+              <p class="question">水素水の場合は、別途カートリッジが必要なため、まずは<br>
                 お問い合わせください。</p>
             </div>
           </li>
@@ -646,7 +646,7 @@
                 <div class="qa-title">
                   <p class="ao">Q</p>
                 </div>
-                <p>売買も出来ますか？</p>
+                <p class="question">売買も出来ますか？</p>
               </div>
             </a>
 
