--- a/voice-detail.html
+++ b/voice-detail.html
@@ -453,18 +453,21 @@
     </div> -->
 
 
-    <div class="grid-x grid-padding-x cta cta_btn grid-container">
-        <div class="large-6 medium-6 cell">
-            <div class="primary callout tel">
-                <p>0120-000-000</p>
+    <section class="full-width">
+        <div class="grid-x grid-padding-x cta cta_btn grid-container">
+        
+            <div class="large-6 medium-6 cell">
+                <div class="primary callout tel">
+                    <p>0120-000-000</p>
+                </div>
+            </div>
+            <div class="large-6 medium-6 cell">
+                <div class="primary callout contact">
+                    <p>お申込み</p>
+                </div>
             </div>
         </div>
-        <div class="large-6 medium-6 cell">
-            <div class="primary callout contact">
-                <p>お申込み</p>
-            </div>
-        </div>
-    </div>
+    </section>
 
     <!-- <a href="#" class="button">Read more</a>
     <div class="grid-x grid-padding-x cta">
@@ -547,3 +550,7 @@
           </div>
         </div>
       </div> -->
+
+      
+
+      </body>
