--- a/voice-detail.html
+++ b/voice-detail.html
@@ -29,7 +29,7 @@
 
 
 
-    <section class="mv">
+    <section class="mv" id="top">
         <div class="top-bar">
             <div class="top-bar-left">
                 <ul class="menu">
@@ -551,6 +551,11 @@
         </div>
       </div> -->
 
-      
+      <a href="#top" data-smooth-scroll class="top-button"> ↑ </a>
+
+ <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+ <script src="https://cdn.jsdelivr.net/npm/foundation-sites@6.7.5/dist/js/foundation.min.js"></script>
+ <script> $(document).foundation(); </script>
+
 
       </body>
